# A2A-demo

./: .gitignore  README.md  pyproject.toml
docs/prd/: 2026-04-02-strands-a2a-manager-integration-prd.md
docs/superpowers/specs/2026-04-02-strands-a2a-manager-integration/: 01-phase-1-a2a-protocol-minimum-path.md  02-phase-2-trusted-identity-context.md  03-phase-3-manager-adapter-and-simulation.md  04-phase-4-capability-alignment-and-stream-translation.md  05-phase-5-error-contracts-and-concurrency-governance.md  06-phase-6-internal-handoff-and-validation.md  README.md  internal-adoption-guide.md  validation-checklist.md
plans/: strands-a2a-manager-integration.md
src/strands_a2a_bridge/: __init__.py  app.py  config.py  errors.py
src/strands_a2a_bridge/a2a/: __init__.py  mapping.py  server.py  stub_agent.py
src/strands_a2a_bridge/concurrency/: __init__.py  user_lock.py
src/strands_a2a_bridge/http/: __init__.py  auth.py  context.py
src/strands_a2a_bridge/manager/: __init__.py  contracts.py  fake.py
tasks/: lessons.md
tests/: conftest.py
tests/integration/: test_a2a_sdk_end_to_end_observability.py  test_phase1_a2a_streaming.py  test_phase2_identity_context.py  test_phase3_manager_adapter.py  test_phase4_capability_alignment.py  test_phase5_error_and_concurrency.py  test_phase6_sdk_client_end_to_end.py
tests/unit/: test_error_mapping.py  test_fake_manager.py  test_request_context.py  test_text_input_mapper.py  test_user_lock.py
